Meta data page added

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,13 +2,14 @@ project:
   type: website
 
 website:
-  title: "BatReportQuarto"
+  title: "Reporting Bat Survey Data"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
       - tidy.qmd
+      - meta.qmd
+      - about.qmd
 
 format:
   html:
