Leaflet map added

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ website:
       - visualisation.qmd
       - statistics.qmd
       - reporting.qmd
+      - dynamic.qmd
       - about.qmd
 
 format:
