--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ website:
       - meta.qmd
       - aggregation.qmd
       - visualisation.qmd
+      - maps.qmd
       - statistics.qmd
       - reporting.qmd
       - dynamic.qmd
