--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ website:
       - statistics.qmd
       - reporting.qmd
       - dynamic.qmd
+      - Glossary.qmd
       - resources.qmd
       - about.qmd
 
